--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/07/2017 - 15:25:53)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/07/2017 - 17:47:50)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/*.xmsgs?&DataKey=Warning'>534 Warnings (63 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/*.xmsgs?&DataKey=Warning'>532 Warnings (311 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
-<TD ALIGN=RIGHT>3,310</TD>
+<TD ALIGN=RIGHT>3,333</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>15%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>3,309</TD>
+<TD ALIGN=RIGHT>3,332</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -78,43 +78,43 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>5,178</TD>
+<TD ALIGN=RIGHT>5,169</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>4,138</TD>
+<TD ALIGN=RIGHT>4,378</TD>
 <TD ALIGN=RIGHT>10,752</TD>
-<TD ALIGN=RIGHT>38%</TD>
+<TD ALIGN=RIGHT>40%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>4,138</TD>
-<TD ALIGN=RIGHT>4,138</TD>
+<TD ALIGN=RIGHT>4,378</TD>
+<TD ALIGN=RIGHT>4,378</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>4,138</TD>
+<TD ALIGN=RIGHT>4,378</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>5,460</TD>
+<TD ALIGN=RIGHT>5,450</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>25%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>4,363</TD>
+<TD ALIGN=RIGHT>4,349</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>282</TD>
+<TD ALIGN=RIGHT>281</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,7 +126,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift registers</TD>
-<TD ALIGN=RIGHT>431</TD>
+<TD ALIGN=RIGHT>436</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -223,21 +223,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Sep 7 15:15:47 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>307 Warnings (16 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>126 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Sep 7 15:23:34 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>79 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>69 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Sep 7 15:24:36 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>53 Warnings (47 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>42 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Sep 7 15:25:06 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>48 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Sep 7 17:39:49 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>309 Warnings (309 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>126 Infos (126 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Sep 7 17:45:19 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>79 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>69 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Sep 7 17:46:21 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>51 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>42 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Sep 7 17:47:05 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>47 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Sep 7 15:25:20 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Sep 7 15:25:52 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>47 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Sep 7 17:47:18 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Sep 7 17:47:47 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>46 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 30 11:11:58 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Sep 7 15:25:52 2017</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Thu Sep 7 17:47:49 2017</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/07/2017 - 16:12:37</center>
+<br><center><b>Date Generated:</b> 09/07/2017 - 17:47:51</center>
 </BODY></HTML>
