--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/25/2017 - 16:40:58)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>TOP_LEVEL Project Status (09/25/2017 - 17:08:34)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>dig_mac.xise</TD>
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
-<TD ALIGN=RIGHT>3,500</TD>
+<TD ALIGN=RIGHT>3,508</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>16%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>3,499</TD>
+<TD ALIGN=RIGHT>3,507</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -78,37 +78,37 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>5,694</TD>
+<TD ALIGN=RIGHT>5,697</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>26%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>4,778</TD>
+<TD ALIGN=RIGHT>4,407</TD>
 <TD ALIGN=RIGHT>10,752</TD>
-<TD ALIGN=RIGHT>44%</TD>
+<TD ALIGN=RIGHT>40%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>4,778</TD>
-<TD ALIGN=RIGHT>4,778</TD>
+<TD ALIGN=RIGHT>4,407</TD>
+<TD ALIGN=RIGHT>4,407</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>4,778</TD>
+<TD ALIGN=RIGHT>4,407</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>6,036</TD>
+<TD ALIGN=RIGHT>6,039</TD>
 <TD ALIGN=RIGHT>21,504</TD>
 <TD ALIGN=RIGHT>28%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>4,914</TD>
+<TD ALIGN=RIGHT>4,913</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,7 +126,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift registers</TD>
-<TD ALIGN=RIGHT>396</TD>
+<TD ALIGN=RIGHT>400</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -224,20 +224,20 @@ System Settings</A>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Sep 25 16:38:01 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Warning'>275 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/xst.xmsgs?&DataKey=Info'>126 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Sep 25 16:38:24 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>63 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>77 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Sep 25 16:39:31 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>50 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>43 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Sep 25 16:40:04 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>46 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Sep 25 17:06:03 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>63 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/ngdbuild.xmsgs?&DataKey=Info'>77 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Sep 25 17:07:09 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Warning'>50 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/map.xmsgs?&DataKey=Info'>43 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Sep 25 17:07:40 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Warning'>46 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/par.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Sep 25 16:40:18 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Sep 25 16:40:51 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>45 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Sep 25 17:07:55 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\TOP_LEVEL.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Sep 25 17:08:29 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>45 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\_xmsgs/bitgen.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 30 11:11:58 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Sep 25 16:40:53 2017</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Sep 25 17:08:29 2017</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/25/2017 - 17:01:46</center>
+<br><center><b>Date Generated:</b> 09/25/2017 - 17:08:34</center>
 </BODY></HTML>
