--- a/GEL_CAPTAN/TOP_LEVEL_summary.html
+++ b/GEL_CAPTAN/TOP_LEVEL_summary.html
@@ -235,9 +235,9 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Sep 30 11:11:58 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Sep 26 16:50:07 2017</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/cbradford/KickerControllerFirmware/GEL_CAPTAN\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue Sep 26 16:50:07 2017</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/26/2017 - 16:50:12</center>
+<br><center><b>Date Generated:</b> 09/28/2017 - 11:16:25</center>
 </BODY></HTML>
